# pianolog-agents

./: .gitignore  README.md  SETUP  pyproject.toml
database/: practice.db
scripts/: createDatabase.ipynb  parserNorm.ipynb  pipelineTest.ipynb  test.csv  test.ipynb
src/pianolog/: db.py
src/pianolog_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
