[project]
name = "pianolog-agents"
version = "0.1.0"
description = "Agentic AI pipeline for piano practice logging"
authors = [{ name = "Sebastián" }]
requires-python = ">=3.10"

dependencies = [
    "openai",
    "python-dotenv",
    "gradio",
    "pydantic",
    "numpy",
    "pandas",
    "matplotlib",
    "openai-agents>=0.17.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
